# chitauri

./: .gitignore  Cargo.toml  README.md  config.yaml  flake.nix  garnix.yaml  go.mod  go.sum  main.go
.github/: renovate.js  renovate.json
.github/workflows/: build.yaml  go.yml  renovate.yaml
config/: config.go
example/: config.yaml
src/: main.rs  torrent.rs  tracker.rs
src/net/: udp.rs
src/torrent/: mod.rs
src/tracker/: http.rs  mod.rs  udp.rs
torrent/: torrent.go
