[package]
name = "chitauri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
clap = { version = "3", features = ["derive"] }
config = "0.13.1"
deku = "0.13"
derive_builder = "0.11"
getset = "0.1"
generic-array = "0.14"
hyper = "0.14"
log = "0.4"
rand = "0.8"
reqwest = "0.11"
rust-s3 = "0.29"
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "debug-print"] }
serde = { version = "1", features = ["derive"] }
serde_bencode = "0.2"
serde_bytes = "0.11"
serde_yaml = "0.8"
sha1 = "0.10"
simple_logger = { version = "2.1", features = ["stderr"] }
snafu = "0.7"
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
url = "2"