[package]
name = "chitauri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.0"
clap = { version = "3.0.0", features = ["derive"] }
config = "0.13.3"
deku = "0.15.0"
derive_builder = "0.12.0"
getset = "0.1.2"
generic-array = "0.14.0"
hyper = "0.14.0"
log = "0.4.0"
rand = "0.8.0"
reqwest = "0.11.0"
rust-s3 = "0.32.0"
sea-orm = { version = "0.11.0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "debug-print"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_bencode = "0.2.0"
serde_bytes = "0.11.0"
serde_yaml = "0.9.0"
sha1 = "0.10.0"
simple_logger = { version = "4.0.0", features = ["stderr"] }
snafu = "0.7.0"
thiserror = "1.0.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
url = "2.0.0"