[package]
name = "chitauri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
clap = { version = "4.1.6", features = ["derive"] }
config = "0.13.3"
deku = "0.15.1"
derive_builder = "0.12.0"
encoding_rs = "0.8.33"
form_urlencoded = "1.2.0"
getset = "0.1.2"
generic-array = "0.14.6"
hyper = "0.14.24"
log = "0.4.17"
rand = "0.8.5"
reqwest = "0.12.1"
rust-s3 = "0.32.3"
sea-orm = { version = "0.11.1", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "debug-print"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_bencode = "0.2.3"
serde_bytes = "0.11.9"
serde_yaml = "0.9.17"
sha1 = "0.10.5"
simple_logger = { version = "4.0.0", features = ["stderr"] }
snafu = "0.7.4"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["rt", "rt-multi-thread", "macros"] }
url = { version = "2.3.1", features = ["serde"] }
# url_serde = "0.2.0"